# AREA

./: README.md  docker-compose.yml
CLI/: .env.exemple  pyproject.toml
CLI/src/: async_typer.py  main.py
CLI/src/client/: area_client.py  auth_client.py  client.py
CLI/src/command/: config.py  utils.py
CLI/src/command/account/: auth.py
CLI/src/command/area/: area.py  config.py
CLI/src/command/oauth/: oauth.py
CLI/src/settings/: conf.py
CLI/src/types/auth/: register.py
CLI/src/utils/: auth.py  typer.py
backend/: create_spotify_area.sh  create_spotify_trigger.sh  pyproject.toml  shell.nix  test.sh
backend/Doc/: actions_reactions_triggers.md  dev.md  models.md  summary.md  worker_workflow.md
backend/aera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/deployment/: Dockerfile  docker-compose.yml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_migration.py  0002_base_data_structure.py  0003_add_actions_reactions_triggers.py  0004_add_trigger.py  0005_add_userservice_relationship.py  0006_fix_db.py  0007_add_name_column_to_triggers.py  0008_add_config.py  0009_62a89bf08c56_add_hash_pass.py  0010_dd52bb871479_fix_missing_user_id_seq.py  0011_00b5f8b31ced_fix_missing_user_id_seq.py  0012_7b049b642570_add_discord_service.py  0013_d69a4b6d9043_fix_users_primary_key_sequence.py  0014_2d92830436ae_add_conifg_areas.py  0015_8a9168fb0df7_add_areas_auto_increment_and_other_fixes.py  0016_86cbfd0e2cdb_add_link.py  0017_1384ce79e0bc_feat_new_actions.py  0018_16637cc39d03_fix_base_actions_time_action_is_wrongly_.py  0019_a6894550f53d_feat_github_service.py  0020_224479749d5d_feat_spotify_service.py  0021_bc7a6ec6b1e2_update_token_fields_to_text.py  0022_b2a6997dc43e_feat_new_api.py  0023_eeba97687abf_feat_microsoft_api.py  0024_ae574069096e_feat_google_api.py  0025_f9b0e0568ff4_make_trigger_id_nullable.py  0026_7a714bf8a184_add_date_and_hourly_trigger.py  0027_b2007d8b116b_feat_time_service.py
backend/scripts/: create_area.sh  create_area_gmail.sh  create_triggers.sh  get_component.sh  get_config.sh  get_triggers.sh
backend/src/: config.py  utils.py
backend/src/auth/: config.py
backend/src/db/: config.py  connection.py
backend/src/db/accessors/: accessor_user.py  action_accessor.py  reaction_accessor.py  triggers_accessor.py  user_service_accessor.py
backend/src/db/models/: __init__.py  area.py  base.py  reaction.py  service.py  triggers.py  user.py  user_service.py
backend/src/oauth/: config.py
backend/src/schemas/: action.py  area.py  auth.py  oauth.py  reaction.py  service.py  trigger.py  user.py  user_service.py
backend/src/service/: base.py  main.py
backend/src/service/Action/: actions.py  date_action.py  hourly_action.py  http_get_action.py  time_action.py
backend/src/service/Action/discord/: __init__.py  channel_created.py  channel_deleted.py  channel_upadte.py  guild_role_added.py  member_removed.py  message_updated.py  new_message_in_channel.py  user_joins_guild.py
backend/src/service/Action/github/: github_action.py
backend/src/service/Action/google/: gmail_action.py
backend/src/service/Action/microsoft/: outlook_action.py
backend/src/service/Action/spotify/: track_played.py
backend/src/service/Reaction/: print_reaction.py  reactions.py
backend/src/service/Reaction/discord/: add_reaction.py  delete_message.py  edit_message.py  send_message.py
backend/src/service/Reaction/github/: github_reaction.py
backend/src/service/Reaction/google/: gmail_reaction.py
backend/src/service/Reaction/microsoft/: outlook_reaction.py
backend/src/service/Reaction/spotify/: add_playlist.py
backend/src/service/Trigger/: date_trigger.py  hourly_trigger.py  time_trigger.py  triggers.py
backend/src/service/Trigger/discord/: base_config.py  channel_created.py  channel_deleted.py  channel_upadte.py  guild_role_added.py  member_removed.py  message_updated.py  new_message_in_channel.py  user_joins_guild.py
backend/src/service/Worker/: worker.py
backend/src/service/config/: base.py  filter.py
backend/src/web/controllers/: about.py  area.py  auth.py  main.py  oauth.py  trigger.py
(+37 files in other folders)
